--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -8,7 +8,7 @@
 				android:paddingBottom="@dimen/activity_vertical_margin"
 				tools:context=".MainActivity$PlaceholderFragment">
 
-	<ListView android:layout_width="fill_parent"
+	<ListView android:layout_width="match_parent"
 			  android:layout_height="match_parent"
 		android:id="@+id/listview_forecast"></ListView>
 
