--- a/app/src/main/res/menu/menu_forecastfragment.xml
+++ b/app/src/main/res/menu/menu_forecastfragment.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
 	  xmlns:tools="http://schemas.android.com/tools"
 	  tools:context=".MainActivity">
-	<item android:id="@+id/action_refresh"
-		  android:title="@string/action_refresh"
+	<item android:id="@+id/item_refresh"
+		  android:title="@string/item_refresh"
 		  android:showAsAction="never"/>
 </menu>
