--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -3,5 +3,5 @@
 			 android:id="@+id/container"
 			 android:layout_width="match_parent"
 			 android:layout_height="match_parent"
-			 tools:context="com.hally.sunshine.DetailActivity"
+			 tools:context="com.hally.sunshine.view.DetailActivity"
 			 tools:ignore="MergeRootFrame"/>
