Issue#5 - Lesson 3 - changed formatHighLows to show temperature in Imperial unit. Added atempt to restore forecastStr in DetailFragment (does not work yet)

--- a/app/src/main/res/xml/settings_pref_general.xml
+++ b/app/src/main/res/xml/settings_pref_general.xml
@@ -8,7 +8,7 @@
         android:defaultValue="@string/pref_location_default"
         android:inputType="text"
         android:singleLine="true"
-         />
+         /><!--MountainView postal code 94043-->
 
 	<ListPreference
 		android:key="@string/pref_temp_units_key"
