--- a/app/src/main/res/values/strings_activity_settings_detail.xml
+++ b/app/src/main/res/values/strings_activity_settings_detail.xml
@@ -15,9 +15,12 @@
 	<!--Key name for temperature unit preference in SharedPreferences-->
 	<string name="pref_temp_units_key" translatable="false">units</string>
 
+	<string name="pref_units_metric">metric</string>
+	<string name="pref_units_imperial">imperial</string>
+
 	<string-array name="pref_units_values">
-		<item>metric</item>
-		<item>imperial</item>
+		<item>@string/pref_units_metric</item>
+		<item>@string/pref_units_imperial</item>
 	</string-array>
 
 	<string-array name="pref_units_options">
