--- a/app/src/main/res/values/strings_menu.xml
+++ b/app/src/main/res/values/strings_menu.xml
@@ -3,4 +3,5 @@
 	<string name="item_settings">Settings</string>
 	<string name="item_refresh" translatable="false">Refresh</string>
 	<string name="item_map" translatable="false">Map</string>
+	<string name="item_share" translatable="false">Share</string>
 </resources>
