--- a/app/src/main/res/xml/settings_pref_general.xml
+++ b/app/src/main/res/xml/settings_pref_general.xml
@@ -11,9 +11,9 @@
          /><!--MountainView postal code 94043-->
 
 	<ListPreference
-		android:key="@string/pref_temp_units_key"
-		android:title="@string/pref_temp_units_label"
-		android:defaultValue="@string/pref_temp_units_default"
+		android:key="@string/pref_units_key"
+		android:title="@string/pref_units_label"
+		android:defaultValue="@string/pref_units_default"
 		android:entryValues="@array/pref_units_values"
 		android:entries="@array/pref_units_options"
 		/>
