--- a/app/src/main/res/layout/list_item_forecast.xml
+++ b/app/src/main/res/layout/list_item_forecast.xml
@@ -1,9 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-		  android:layout_width="match_parent"
-		  android:layout_height="wrap_content"
-	android:minHeight="?android:attr/listPreferredItemHeight"
-	android:gravity="center_vertical"
-	android:id="@+id/list_item_forecast_textview">
+<LinearLayout android:id="@+id/list_item_forecast"
+			  xmlns:android="http://schemas.android.com/apk/res/android"
+			  android:layout_width="match_parent"
+			  android:layout_height="wrap_content"
+			  android:clickable="true"
+			  android:gravity="center_vertical"
+			  android:minHeight="?android:attr/listPreferredItemHeight"
+			  android:orientation="horizontal"
+			  android:padding="@dimen/activity_vertical_margin">
 
-</TextView>
+	<ImageView android:id="@+id/list_item_icon"
+			   android:layout_width="wrap_content"
+			   android:layout_height="wrap_content"
+			   android:layout_weight="0"
+			   android:src="@mipmap/ic_launcher"/>
+
+	<LinearLayout android:layout_width="wrap_content"
+				  android:layout_height="wrap_content"
+				  android:layout_weight="1"
+				  android:orientation="vertical">
+
+		<TextView android:id="@+id/list_item_date_textview"
+				  android:layout_width="wrap_content"
+				  android:layout_height="wrap_content"
+				  android:text="Tomorrow"/>
+
+		<TextView android:id="@+id/list_item_forecast_textview"
+				  android:layout_width="wrap_content"
+				  android:layout_height="wrap_content"
+				  android:text="Clear"/>
+
+	</LinearLayout>
+
+	<LinearLayout android:layout_width="wrap_content"
+				  android:layout_height="wrap_content"
+				  android:layout_weight="0"
+				  android:gravity="center_horizontal"
+				  android:orientation="vertical">
+
+		<TextView android:id="@+id/list_item_high_textview"
+				  android:layout_width="wrap_content"
+				  android:layout_height="wrap_content"
+				  android:text="81"/>
+
+		<TextView android:id="@+id/list_item_low_textview"
+				  android:layout_width="wrap_content"
+				  android:layout_height="wrap_content"
+				  android:text="30"/>
+
+	</LinearLayout>
+
+</LinearLayout>
