--- a/app/src/main/res/layout/list_item_forecast_today.xml
+++ b/app/src/main/res/layout/list_item_forecast_today.xml
@@ -4,8 +4,7 @@
 			  android:layout_height="match_parent"
 			  android:padding="@dimen/activity_vertical_margin"
 			  android:minHeight="?android:attr/listPreferredItemHeight"
-			  android:orientation="horizontal"
-	android:gravity="center_vertical">
+			  android:orientation="horizontal">
 
 	<LinearLayout android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
