Issue #11 - Lesson5 - changed UI of DetailFragment, added binding data to new UI elements

--- a/app/src/main/res/values/strings_activity_settings_detail.xml
+++ b/app/src/main/res/values/strings_activity_settings_detail.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
 	<string name="title_activity_settings_detail">Settings</string>
 
 	<!-- Strings related to General Settings PreferenceActivity-->
@@ -28,6 +28,12 @@
 		<item>@string/pref_units_label_imperial</item>
 	</string-array>
 
-
+	<!-- Windspeed formats -->
+	<string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g
+		id="direction">%2$s</xliff:g></string>
+	<string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g
+		id="direction">%2$s</xliff:g></string>
+	<string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
+	<string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
 
 </resources>
