--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -16,12 +16,14 @@
 			android:id="@+id/detail_day_textview"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:text="Tomorrow"/>
+			android:text="Tomorrow"
+			android:textSize="24sp"/>
 		<TextView
 			android:id="@+id/detail_date_textview"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:text="June 24"/>
+			android:text="June 24"
+			android:textSize="16sp"/>
 
 		<!-- Main content: high, low, art, weather state -->
 		<LinearLayout
@@ -34,18 +36,21 @@
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_weight="1"
-				android:orientation="vertical">
+				android:orientation="vertical"
+				android:layout_gravity="right">
 
 				<TextView
 					android:id="@+id/detail_high_textview"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:text="21°"/>
+					android:text="21°"
+					android:textSize="92sp"/>
 				<TextView
 					android:id="@+id/detail_low_textview"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:text="11°"/>
+					android:text="11°"
+					android:textSize="48sp"/>
 
 			</LinearLayout>
 
@@ -57,14 +62,15 @@
 				android:orientation="vertical">
 				<ImageView
 					android:id="@+id/detail_icon"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:src="@mipmap/ic_launcher"/>
+					android:layout_width="100dp"
+					android:layout_height="100dp"
+					android:src="@mipmap/art_clear"/>
 				<TextView
 					android:id="@+id/detail_forecast_textview"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:text="Clear"/>
+					android:text="Clear"
+					android:textSize="22sp"/>
 			</LinearLayout>
 		</LinearLayout>
 
@@ -73,19 +79,24 @@
 			android:id="@+id/detail_humidity_textview"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:text="48%"/>
+			android:text="48%"
+			android:textSize="22sp"
+			android:layout_marginBottom="4dp"/>
 
 		<TextView
 			android:id="@+id/detail_wind_textview"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:text="6 km/h NW"/>
+			android:text="6 km/h NW"
+			android:textSize="22sp"
+			android:layout_marginBottom="4dp"/>
 
 		<TextView
 			android:id="@+id/detail_pressure_textview"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:text="1014"/>
+			android:text="1014"
+			android:textSize="22sp"/>
 	</LinearLayout>
 
 </ScrollView>
