--- a/app/src/main/res/layout/list_item_forecast.xml
+++ b/app/src/main/res/layout/list_item_forecast.xml
@@ -13,7 +13,7 @@
 			   android:layout_width="wrap_content"
 			   android:layout_height="wrap_content"
 			   android:layout_weight="0"
-			   android:src="@mipmap/ic_launcher"/>
+			   android:src="@mipmap/art_clear"/>
 
 	<LinearLayout android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
@@ -23,12 +23,14 @@
 		<TextView android:id="@+id/list_item_date_textview"
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
-				  android:text="Tomorrow"/>
+				  android:text="Tomorrow"
+				  android:textSize="22sp"/>
 
 		<TextView android:id="@+id/list_item_forecast_textview"
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
-				  android:text="Clear"/>
+				  android:text="Clear"
+				  android:textSize="14sp"/>
 
 	</LinearLayout>
 
@@ -36,17 +38,20 @@
 				  android:layout_height="wrap_content"
 				  android:layout_weight="0"
 				  android:gravity="center_horizontal"
-				  android:orientation="vertical">
+				  android:orientation="vertical"
+		>
 
 		<TextView android:id="@+id/list_item_high_textview"
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
-				  android:text="81"/>
+				  android:text="81"
+				  android:textSize="22sp"/>
 
 		<TextView android:id="@+id/list_item_low_textview"
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
-				  android:text="30"/>
+				  android:text="30"
+				  android:textSize="14sp"/>
 
 	</LinearLayout>
 
