--- a/app/src/main/res/layout/list_item_forecast_today.xml
+++ b/app/src/main/res/layout/list_item_forecast_today.xml
@@ -4,45 +4,58 @@
 			  android:layout_height="match_parent"
 			  android:padding="@dimen/activity_vertical_margin"
 			  android:minHeight="?android:attr/listPreferredItemHeight"
-			  android:orientation="horizontal">
+			  android:orientation="horizontal"
+			  android:background="#ff1da9f6">
 
 	<LinearLayout android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
 				  android:orientation="vertical"
-				  android:gravity="center_horizontal"
-		android:layout_weight="1">
+				  android:gravity="left|center_horizontal"
+		android:layout_weight="1"
+		>
 
 		<TextView android:id="@+id/list_item_date_textview"
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
-				  android:text="Today, June 24"/>
+				  android:text="Today, June 24"
+				  android:textColor="#ffffffff"
+				  android:textSize="22sp"/>
 
 		<TextView android:id="@+id/list_item_high_textview"
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
-				  android:text="81"/>
+				  android:text="81"
+				  android:textColor="#ffffffff"
+				  android:textSize="72sp"/>
 
 		<TextView android:id="@+id/list_item_low_textview"
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
-				  android:text="30"/>
+				  android:text="30"
+				  android:textColor="#ffffffff"
+				  android:textSize="36sp"/>
 	</LinearLayout>
 
 	<LinearLayout android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
 				  android:orientation="vertical"
 				  android:gravity="center_horizontal"
-				  android:layout_weight="1">
+				  android:layout_weight="1"
+				  android:layout_gravity="center_vertical">
 
 		<ImageView android:id="@+id/list_item_icon"
-				   android:layout_width="wrap_content"
-				   android:layout_height="wrap_content"
-				   android:src="@mipmap/ic_launcher"/>
+				   android:layout_width="100dp"
+				   android:layout_height="100dp"
+				   android:src="@mipmap/art_clear"
+			/>
 
 		<TextView android:id="@+id/list_item_forecast_textview"
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
-				  android:text="Clear"/>
+				  android:text="Clear"
+				  android:textColor="#ffffffff"
+				  android:textSize="22sp"
+			/>
 
 
 	</LinearLayout>
