--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -57,13 +57,13 @@
 			<LinearLayout
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:layout_weight="1"
+				android:layout_weight="0"
 				android:gravity="center_horizontal"
 				android:orientation="vertical">
 				<ImageView
 					android:id="@+id/detail_icon"
-					android:layout_width="100dp"
-					android:layout_height="100dp"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
 					android:src="@mipmap/art_clear"/>
 				<TextView
 					android:id="@+id/detail_forecast_textview"
