--- a/app/src/main/res/layout/list_item_forecast_today.xml
+++ b/app/src/main/res/layout/list_item_forecast_today.xml
@@ -40,12 +40,12 @@
 				  android:layout_height="wrap_content"
 				  android:orientation="vertical"
 				  android:gravity="center_horizontal"
-				  android:layout_weight="1"
+				  android:layout_weight="0"
 				  android:layout_gravity="center_vertical">
 
 		<ImageView android:id="@+id/list_item_icon"
-				   android:layout_width="100dp"
-				   android:layout_height="100dp"
+				   android:layout_width="wrap_content"
+				   android:layout_height="wrap_content"
 				   android:src="@mipmap/art_clear"
 			/>
 
