--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -17,13 +17,15 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="Tomorrow"
-			android:textSize="24sp"/>
+			android:textSize="24sp"
+			android:textColor="#ff313131"/>
 		<TextView
 			android:id="@+id/detail_date_textview"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="June 24"
-			android:textSize="16sp"/>
+			android:textSize="16sp"
+			android:textColor="#646464"/>
 
 		<!-- Main content: high, low, art, weather state -->
 		<LinearLayout
@@ -44,13 +46,15 @@
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:text="21°"
-					android:textSize="92sp"/>
+					android:textSize="92sp"
+					android:textColor="#ff313131"/>
 				<TextView
 					android:id="@+id/detail_low_textview"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:text="11°"
-					android:textSize="48sp"/>
+					android:textSize="48sp"
+					android:textColor="#646464"/>
 
 			</LinearLayout>
 
@@ -62,15 +66,16 @@
 				android:orientation="vertical">
 				<ImageView
 					android:id="@+id/detail_icon"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
+					android:layout_width="@dimen/art_image_size"
+					android:layout_height="@dimen/art_image_size"
 					android:src="@mipmap/art_clear"/>
 				<TextView
 					android:id="@+id/detail_forecast_textview"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:text="Clear"
-					android:textSize="22sp"/>
+					android:textSize="22sp"
+					android:textColor="#646464"/>
 			</LinearLayout>
 		</LinearLayout>
 
