--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,13 @@
 	<!-- Default screen margins, per the Android Design guidelines. -->
 	<dimen name="activity_horizontal_margin">16dp</dimen>
 	<dimen name="activity_vertical_margin">16dp</dimen>
+	<dimen name="art_image_size">100dp</dimen>
+	<dimen name="today_item_left_margin">60dp</dimen>
+
+	<dimen name="max_temp_today">72sp</dimen>
+	<dimen name="min_temp_today">36sp</dimen>
+	<dimen name="max_temp_details">92sp</dimen>
+	<dimen name="min_temp_details">48sp</dimen>
+	<dimen name="general_info">22sp</dimen>
+	<dimen name="additional_info">14sp</dimen>
 </resources>
