--- a/app/src/main/res/layout/list_item_forecast.xml
+++ b/app/src/main/res/layout/list_item_forecast.xml
@@ -24,15 +24,13 @@
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
 				  android:text="Tomorrow"
-				  android:textSize="22sp"
-				  android:textColor="#ff313131"/>
+				  android:theme="@style/SansSerifCondensed.Black.General"/>
 
 		<TextView android:id="@+id/list_item_forecast_textview"
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
-				  android:text="Clear"
-				  android:textSize="14sp"
-				  android:textColor="#646464"/>
+				  android:theme="@style/SansSerifCondensed.Grey.GeneralMainForeccast"
+				  android:text="Clear"/>
 
 	</LinearLayout>
 
@@ -46,16 +44,14 @@
 		<TextView android:id="@+id/list_item_high_textview"
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
-				  android:text="81"
-				  android:textSize="22sp"
-				  android:textColor="#ff313131"/>
+				  android:theme="@style/SansSerifCondensed.Black.General"
+				  android:text="81°"/>
 
 		<TextView android:id="@+id/list_item_low_textview"
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
-				  android:text="30"
-				  android:textSize="14sp"
-				  android:textColor="#646464"/>
+				  android:theme="@style/SansSerifCondensed.Grey.GeneralMainForeccast"
+				  android:text="30°"/>
 
 	</LinearLayout>
 
