--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<color name="today_item_background">#ff1ca8f4</color>
-	<color name="today_item_text_color">#ffffffff</color>
-	<color name="general_text_color">#ff313131</color>
-	<color name="additional_text_color">#646464</color>
-
+	<color name="tc_today_item">#ffffffff</color>
+	<color name="tc_general">#ff313131</color>
+	<color name="tc_additional">#646464</color>
 </resources>
