--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,10 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			 xmlns:tools="http://schemas.android.com/tools"
-			 android:id="@+id/container"
-			 android:layout_width="match_parent"
-			 android:layout_height="match_parent"
-			 tools:context=".MainForecastActivity"
-			 tools:ignore="MergeRootFrame"
-	/>
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+		  xmlns:tools="http://schemas.android.com/tools"
+		  android:id="@+id/fragment_main"
+		  android:name="com.hally.sunshine.view.MainForecastFragment"
+		  android:layout_width="match_parent"
+		  android:layout_height="match_parent"
+		  android:layout_marginLeft="@dimen/activity_horizontal_margin"
+		  android:layout_marginRight="@dimen/activity_horizontal_margin"
+		  tools:context="com.hally.sunshine.view.MainForecastFragment"
+		  tools:layout="@android:layout/list_content" />
