--- a/app/src/main/res/layout/list_item_forecast.xml
+++ b/app/src/main/res/layout/list_item_forecast.xml
@@ -10,8 +10,8 @@
 			  android:padding="@dimen/activity_vertical_margin">
 
 	<ImageView android:id="@+id/list_item_icon"
-			   android:layout_width="wrap_content"
-			   android:layout_height="wrap_content"
+			   android:layout_width="@dimen/icon_image_size"
+			   android:layout_height="@dimen/icon_image_size"
 			   android:layout_weight="0"
 			   android:src="@mipmap/art_clear"/>
 
@@ -38,8 +38,7 @@
 				  android:layout_height="wrap_content"
 				  android:layout_weight="0"
 				  android:gravity="center_horizontal"
-				  android:orientation="vertical"
-		>
+				  android:orientation="vertical">
 
 		<TextView android:id="@+id/list_item_high_textview"
 				  android:layout_width="wrap_content"
