--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -78,5 +78,7 @@
 		<item name="android:textSize">@dimen/ts_forecast</item>
 	</style>
 
-
+	<style name="ForecastListStyle">
+		<item name="android:choiceMode">singleChoice</item>
+	</style>
 </resources>
