--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -4,7 +4,7 @@
 			  android:layout_width="match_parent"
 			  android:layout_height="match_parent"
 			  android:baselineAligned="false"
-
+			  android:divider="?android:attr/dividerHorizontal"
 			  android:orientation="horizontal"
 			  tools:context="com.hally.sunshine.view.MainForecastActivity">
 
