--- a/app/src/main/res/layout/list_item_forecast.xml
+++ b/app/src/main/res/layout/list_item_forecast.xml
@@ -7,7 +7,8 @@
 			  android:gravity="center_vertical"
 			  android:minHeight="?android:attr/listPreferredItemHeight"
 			  android:orientation="horizontal"
-			  android:padding="@dimen/activity_vertical_margin">
+			  android:padding="@dimen/activity_vertical_margin"
+			  android:background="@drawable/forecast_list_touch_selector">
 
 	<ImageView android:id="@+id/list_item_icon"
 			   android:layout_width="@dimen/icon_image_size"
@@ -24,12 +25,12 @@
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
 				  android:text="Tomorrow"
-				  android:theme="@style/SansSerifCondensed.Black.General"/>
+				  style="@style/SansSerifCondensed.Black.General"/>
 
 		<TextView android:id="@+id/list_item_forecast_textview"
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
-				  android:theme="@style/SansSerifCondensed.Grey.GeneralMainForeccast"
+				  style="@style/SansSerifCondensed.Grey.GeneralMainForeccast"
 				  android:text="Clear"/>
 
 	</LinearLayout>
@@ -43,13 +44,13 @@
 		<TextView android:id="@+id/list_item_high_textview"
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
-				  android:theme="@style/SansSerifCondensed.Black.General"
+				  style="@style/SansSerifCondensed.Black.General"
 				  android:text="81°"/>
 
 		<TextView android:id="@+id/list_item_low_textview"
 				  android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
-				  android:theme="@style/SansSerifCondensed.Grey.GeneralMainForeccast"
+				  style="@style/SansSerifCondensed.Grey.GeneralMainForeccast"
 				  android:text="30°"/>
 
 	</LinearLayout>
