--- a/app/src/main/res/layout/list_item_forecast_today.xml
+++ b/app/src/main/res/layout/list_item_forecast_today.xml
@@ -5,12 +5,12 @@
 			  android:minHeight="?android:attr/listPreferredItemHeight"
 			  android:orientation="horizontal"
 			  android:paddingLeft="@dimen/today_item_left_margin"
-			  android:background="@drawable/forecast_list_touch_selector">
+			  android:background="@drawable/forecast_today_touch_selector">
 
 	<LinearLayout android:layout_width="wrap_content"
 				  android:layout_height="wrap_content"
 				  android:layout_weight="1"
-				  android:gravity="left|center_horizontal"
+				  android:gravity="left"
 				  android:orientation="vertical">
 
 		<TextView android:id="@+id/list_item_date_textview"
