--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -9,7 +9,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:orientation="vertical"
-		android:padding="@dimen/activity_vertical_margin">
+		>
 
 		<!-- Header: Day, Date -->
 		<TextView
@@ -32,14 +32,15 @@
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
 			android:layout_marginTop="@dimen/activity_horizontal_margin"
-			android:orientation="horizontal">
+			android:orientation="horizontal"
+			>
 
 			<LinearLayout
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_weight="1"
 				android:orientation="vertical"
-				android:layout_gravity="right">
+				android:layout_gravity="center_vertical">
 
 				<TextView
 					android:id="@+id/detail_high_textview"
@@ -61,11 +62,12 @@
 				android:layout_height="wrap_content"
 				android:layout_weight="0"
 				android:gravity="center_horizontal"
-				android:orientation="vertical">
+				android:orientation="vertical"
+				android:layout_gravity="center_vertical">
 				<ImageView
 					android:id="@+id/detail_icon"
-					android:layout_width="@dimen/art_image_size"
-					android:layout_height="@dimen/art_image_size"
+					android:layout_width="@dimen/icon_details_size"
+					android:layout_height="@dimen/icon_details_size"
 					android:src="@mipmap/art_clear"/>
 				<TextView
 					android:id="@+id/detail_forecast_textview"
@@ -82,7 +84,8 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			style="@style/SansSerifLight.General"
-			android:layout_marginBottom="@dimen/details_marginBottom"
+			android:layout_marginBottom="@dimen/details_humidity_margin"
+			android:layout_marginTop="@dimen/details_humidity_margin"
 			android:text="Humidity: 48%"/>
 
 		<TextView
@@ -90,7 +93,7 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			style="@style/SansSerifLight.General"
-			android:layout_marginBottom="@dimen/details_marginBottom"
+			android:layout_marginBottom="@dimen/details_humidity_margin"
 			android:text="Wind: 6 km/h NW"/>
 
 		<TextView
