--- a/app/src/main/res/layout/list_item_forecast_today.xml
+++ b/app/src/main/res/layout/list_item_forecast_today.xml
@@ -40,8 +40,8 @@
 				  android:orientation="vertical">
 
 		<ImageView android:id="@+id/list_item_icon"
-				   android:layout_width="@dimen/art_image_size"
-				   android:layout_height="@dimen/art_image_size"
+				   android:layout_width="@dimen/icon_todayitem_size"
+				   android:layout_height="@dimen/icon_todayitem_size"
 				   android:src="@mipmap/art_clear"/>
 
 		<TextView android:id="@+id/list_item_forecast_textview"
