--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -1,5 +1,6 @@
 <resources>
-	<dimen name="art_image_size">144dp</dimen>
-	<dimen name="icon_image_size">48dp</dimen>
+	<dimen name="icon_todayitem_size">144dp</dimen>
+	<dimen name="icon_details_size">186dp</dimen>
+	<dimen name="icon_listitem_size">48dp</dimen>
 	<dimen name="today_item_left_margin">70dp</dimen>
 </resources>
