--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,8 +2,9 @@
 	<!-- Default screen margins, per the Android Design guidelines. -->
 	<dimen name="activity_horizontal_margin">16dp</dimen>
 	<dimen name="activity_vertical_margin">16dp</dimen>
-	<dimen name="art_image_size">100dp</dimen>
-	<dimen name="icon_image_size">36dp</dimen>
+	<dimen name="icon_todayitem_size">100dp</dimen>
+	<dimen name="icon_details_size">136dp</dimen>
+	<dimen name="icon_listitem_size">36dp</dimen>
 	<dimen name="today_item_left_margin">60dp</dimen>
-	<dimen name="details_marginBottom">4dp</dimen>
+	<dimen name="details_humidity_margin">4dp</dimen>
 </resources>
