--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -14,18 +14,18 @@
 		<!-- Header: Day, Date -->
 		<TextView
 			android:id="@+id/detail_day_textview"
+			style="@style/SansSerifCondensed.Black"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			style="@style/SansSerifCondensed.Black"
-			android:textSize="@dimen/ts_details_today_header"
-			android:text="Tomorrow"/>
+			android:text="Tomorrow"
+			android:textSize="@dimen/ts_details_today_header"/>
 		<TextView
 			android:id="@+id/detail_date_textview"
+			style="@style/SansSerifCondensed.Grey"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			style="@style/SansSerifCondensed.Grey"
-			android:textSize="@dimen/ts_details_date"
-			android:text="June 24"/>
+			android:text="June 24"
+			android:textSize="@dimen/ts_details_date"/>
 
 		<!-- Main content: high, low, art, weather state -->
 		<LinearLayout
@@ -38,21 +38,21 @@
 			<LinearLayout
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:layout_gravity="center_vertical"
 				android:layout_weight="1"
-				android:orientation="vertical"
-				android:layout_gravity="center_vertical">
+				android:orientation="vertical">
 
 				<TextView
 					android:id="@+id/detail_high_textview"
+					style="@style/SansSerifLight.Black.Max"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					style="@style/SansSerifLight.Black.Max"
 					android:text="21°"/>
 				<TextView
 					android:id="@+id/detail_low_textview"
+					style="@style/SansSerifLight.Grey.Min"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					style="@style/SansSerifLight.Grey.Min"
 					android:text="11°"/>
 
 			</LinearLayout>
@@ -60,10 +60,10 @@
 			<LinearLayout
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:layout_gravity="center_vertical"
 				android:layout_weight="0"
 				android:gravity="center_horizontal"
-				android:orientation="vertical"
-				android:layout_gravity="center_vertical">
+				android:orientation="vertical">
 				<ImageView
 					android:id="@+id/detail_icon"
 					android:layout_width="@dimen/icon_details_size"
@@ -71,9 +71,9 @@
 					android:src="@mipmap/art_clear"/>
 				<TextView
 					android:id="@+id/detail_forecast_textview"
+					style="@style/SansSerifCondensed.Grey.GeneralDetails"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					style="@style/SansSerifCondensed.Grey.GeneralDetails"
 					android:text="Clear"/>
 			</LinearLayout>
 		</LinearLayout>
@@ -81,27 +81,32 @@
 		<!-- Humidity, wind, pressure -->
 		<TextView
 			android:id="@+id/detail_humidity_textview"
+			style="@style/SansSerifLight.General"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			style="@style/SansSerifLight.General"
 			android:layout_marginBottom="@dimen/details_humidity_margin"
 			android:layout_marginTop="@dimen/details_humidity_margin"
 			android:text="Humidity: 48%"/>
 
 		<TextView
 			android:id="@+id/detail_wind_textview"
+			style="@style/SansSerifLight.General"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			style="@style/SansSerifLight.General"
 			android:layout_marginBottom="@dimen/details_humidity_margin"
 			android:text="Wind: 6 km/h NW"/>
 
 		<TextView
 			android:id="@+id/detail_pressure_textview"
+			style="@style/SansSerifLight.General"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			style="@style/SansSerifLight.General"
 			android:text="Pressure: 1014 hPa"/>
+
+		<com.hally.sunshine.view.CircleCustomView android:id="@+id/exampleCircle"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:contentDescription="@string/exampleViewDescription"/>
 	</LinearLayout>
 
 </ScrollView>
