--- a/app/src/main/res/layout/list_item_forecast.xml
+++ b/app/src/main/res/layout/list_item_forecast.xml
@@ -10,7 +10,7 @@
 			  android:orientation="horizontal"
 			  android:paddingRight="@dimen/activity_vertical_margin">
 
-	<FrameLayout android:layout_width="@dimen/today_item_left_margin"
+	<FrameLayout android:layout_width="wrap_content"
 				 android:layout_height="wrap_content">
 
 		<ImageView android:id="@+id/list_item_icon"
