--- a/app/src/main/res/menu/menu_main_f_fragment.xml
+++ b/app/src/main/res/menu/menu_main_f_fragment.xml
@@ -4,4 +4,8 @@
 	<item android:id="@+id/item_refresh"
 		  android:title="@string/item_refresh"
 		  android:showAsAction="never"/>
+	<item android:id="@+id/item_map"
+		  android:title="@string/item_map"
+		  android:orderInCategory="100"
+		  android:showAsAction="never"/>
 </menu>
