--- a/app/src/main/res/xml/settings_pref_general.xml
+++ b/app/src/main/res/xml/settings_pref_general.xml
@@ -1,28 +1,28 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
-    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
-    <EditTextPreference
-        android:key="@string/pref_location_key"
-        android:title="@string/pref_location_label"
-        android:defaultValue="@string/pref_location_default"
-        android:inputType="text"
-        android:singleLine="true"
-         /><!--MountainView postal code 94043-->
+	<!-- NOTE: EditTextPreference accepts EditText attributes. -->
+	<!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
+	<EditTextPreference
+		android:defaultValue="@string/pref_location_default"
+		android:inputType="text"
+		android:key="@string/pref_location_key"
+		android:singleLine="true"
+		android:title="@string/pref_location_label"/>
+	<!--MountainView postal code 94043-->
 
 	<ListPreference
-		android:key="@string/pref_units_key"
-		android:title="@string/pref_units_label"
 		android:defaultValue="@string/pref_units_default"
-		android:entryValues="@array/pref_units_values"
 		android:entries="@array/pref_units_options"
-		/>
+		android:entryValues="@array/pref_units_values"
+		android:key="@string/pref_units_key"
+		android:summary="@string/pref_units_default"
+		android:title="@string/pref_units_label"/>
 
 	<CheckBoxPreference
-		android:title="@string/pref_enable_notifications_label"
+		android:defaultValue="@string/pref_enable_notifications_default"
 		android:key="@string/pref_enable_notifications_key"
 		android:summaryOff="@string/pref_enable_notifications_false"
 		android:summaryOn="@string/pref_enable_notifications_true"
-		android:defaultValue="@string/pref_enable_notifications_default" />
+		android:title="@string/pref_enable_notifications_label"/>
 
 </PreferenceScreen>
