--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,7 @@
 	<color name="tc_additional">#646464</color>
 	<color name="grey">#cccccc</color>
 	<color name="light_blue">#ff64c2f4</color>
+	<color name="sunshine_blue">#ff1ca8f4</color>
+	<color name="sunshine_dark_blue">#0288D1</color>
 	<color name="red">#ff0000</color>
 </resources>
