Issue #17: removed ic_logo, changed ActionBar style - now it shows icon with title together

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,6 @@
 <resources>
 
 	<!-- Base application theme. -->
-	<!--<style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-
-	</style>-->
-
-	<!-- Base application theme. -->
 	<style name="AppTheme" parent="@style/Theme.AppCompat.Light.DarkActionBar">
 		<item name="colorPrimary">@color/sunshine_blue</item>
 		<item name="colorPrimaryDark">@color/sunshine_dark_blue</item>
@@ -13,14 +8,15 @@
 
 	<!-- Main activity theme. -->
 	<style name="ForecastTheme" parent="@style/Theme.AppCompat.Light">
-		<item name="actionBarStyle">@style/ActionBar.Solid.Sunshine.NoTitle</item>
+		<item name="actionBarStyle">@style/ActionBar.Solid.Sunshine</item>
 	</style>
 
 	<!-- main activity action bar styles -->
-	<style name="ActionBar.Solid.Sunshine.NoTitle" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
-		<item name="displayOptions">useLogo|showHome</item>
-		<item name="logo">@mipmap/ic_logo</item>
+	<style name="ActionBar.Solid.Sunshine" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
 		<item name="background">@color/sunshine_blue</item>
+		<item name="title">@string/app_name</item>
+		<item name="icon">@mipmap/art_clear</item>
+		<item name="displayOptions">showTitle|showHome|useLogo</item>
 	</style>
 
 	<style name="SansSerifLight" >
