--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,6 +17,7 @@
 		<item name="title">@string/app_name</item>
 		<item name="icon">@mipmap/art_clear</item>
 		<item name="displayOptions">showTitle|showHome|useLogo</item>
+		<item name="titleTextStyle">@style/TitleActionBar</item>
 	</style>
 
 	<style name="SansSerifLight" >
@@ -47,6 +48,10 @@
 
 	<style name="SansSerifCondensed.White.General" >
 		<item name="android:textSize">@dimen/ts_general_info</item>
+	</style>
+
+	<style name="TitleActionBar" parent="SansSerifCondensed.White.General">
+		<item name="android:textStyle">italic|bold</item>
 	</style>
 
 	<!-- For MainForecastFragment and its list_item_forecast elements-->
