--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
 	<color name="sunshine_blue">#ff1ca8f4</color>
 	<color name="sunshine_dark_blue">#0288D1</color>
 	<color name="red">#ff0000</color>
+	<color name="white">#ffffffff</color>
 </resources>
