issue#22 - added usage of PreferenceFragment to fix the problem with action bar (it is not visible)

--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="AppTheme" parent="android:Theme.Material.Light">
+    <style name="SunshineAppTheme" parent="SunshineAppTheme.Base">
+        <item name="windowActionBar">false</item>
     </style>
+
+    <style name="SunshineAppTheme.Base" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+
+
 </resources>
